--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -91,7 +91,7 @@
 
                             <p>
                                 Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Infektionsstufe die folgenden Nachweise erbracht werden können.
-                                Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+                                Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G bzw. 2G+. Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
 
                             <p>
                                 Termine mit freien Plätzen findest Du unten im Anmeldeformular.
@@ -152,7 +152,8 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="05.12.21 (So) 10 - 12:30 Uhr"> 05.12.21 (So) 10 - 12:30 Uhr</option>
+                                    <option value="Benachrichtige mich bei neuen Terminen."> Benachrichtige mich bei neuen Terminen.</option>
+                                    <!--<option value="05.12.21 (So) 10 - 12:30 Uhr"> 05.12.21 (So) 10 - 12:30 Uhr</option>-->
                                     
 
                                 </select>
@@ -169,9 +170,8 @@
                             <div class="col-md-6 form-group">
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
-                                    <option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option>
-                                    <option value="seit mindestens 14 Tagen vollständig geimpft">seit mindestens 14 Tagen vollständig geimpft</option>
-                                    <option value="genesen">genesen</option>
+                                    <option value="seit mindestens 14 Tagen vollständig geimpft +  Schnelltest">seit mindestens 14 Tagen vollständig geimpft + Schnelltest</option>
+                                    <option value="genesen + Schnelltest">genesen + Schnelltest</option>
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
