--- a/fussmatte.html
+++ b/fussmatte.html
@@ -60,7 +60,7 @@
                             <p class="d-flex">
                                 <span class="ion-ios-location icon mr-3"></span>
                             <p>
-                                Bestellungen bis 12.12.2021 werden noch bis Weihnachten fertiggestellt.
+                                Bestellungen bis 11.12.2021 werden noch bis Weihnachten fertiggestellt.
                                 Alle anderen Bestellungen werden dann ab dem 03.01.2022 bearbeitet.
                             </p>
 
@@ -77,7 +77,7 @@
 
                             <p>
                                 Hier kannst du nun ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir.
-                                Bitte beachte bis zur Fertigstellung einen Zeitraum ab Auftragseingang von bis zu drei Wochen.
+                                Bitte beachte bis zur Fertigstellung einen Zeitraum ab Auftragseingang von ca. drei Wochen.
                             </p>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <label for="message">Text</label>
-                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du die Versandadresse angeben und deinen Wunschtext einfügen, z. B. Die Schmitts, Familie Schimtt, Hier wohnen Emily + André, Willkommen bei den Schmitts, ..." required cols="30" rows="8"></textarea>
+                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst Du die Versandadresse angeben und deinen Wunschtext einfügen, z. B. Die Schmitts, Familie Schimtt, Hier wohnen Emma + André (kein & möglich), Willkommen bei den Schmitts, ..." required cols="30" rows="8"></textarea>
                             </div>
                         </div>
                         <div class="row">
