--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -154,7 +154,6 @@
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
                                     <option value="07.01.22 (Fr) 18 - 21 Uhr">07.01.22 (Fr) 18 - 21 Uhr</option>
                                     <option value="12.01.22 (Mi) 18 - 21 Uhr">12.01.22 (Mi) 18 - 21 Uhr</option>
-                                    <option value="16.01.22 (So) 10 - 13 Uhr">16.01.22 (So) 10 - 13 Uhr</option>
                                     <option value="22.01.22 (Sa) 10 - 13 Uhr">22.01.22 (Sa) 10 - 13 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
@@ -178,8 +177,9 @@
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
                                     <!--option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option-->
-                                    <option value="seit mindestens 14 Tagen vollständig geimpft + Schnelltest">seit mindestens 14 Tagen vollständig geimpft + Schnelltest</option>
-                                    <option value="genesen + Schnelltest">genesen + Schnelltest</option>
+                                    <option value="seit mindestens 14 Tagen vollständig geimpft (nicht länger als 6 Monate) + Schnelltest">seit mindestens 14 Tagen vollständig geimpft (nicht länger als 6 Monate) + Schnelltest</option>
+                                    <option value="Geboostert">Geboostert</option>
+                                    <option value="genesen (nicht länger als 6 Monate) + Schnelltest">genesen (nicht länger als 6 Monate) + Schnelltest</option>
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
