--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -152,9 +152,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="07.01.22 (Fr) 18 - 21 Uhr">07.01.22 (Fr) 18 - 21 Uhr</option>
-                                    <option value="12.01.22 (Mi) 18 - 21 Uhr">12.01.22 (Mi) 18 - 21 Uhr</option>
-                                    <option value="22.01.22 (Sa) 10 - 13 Uhr">22.01.22 (Sa) 10 - 13 Uhr</option>
+                                    <option value="22.01.22 (Sa) 10 - 13 Uhr (noch 2 freie Plätze)">22.01.22 (Sa) 10 - 13 Uhr (noch 2 freie Plätze)</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
                                     
