--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -152,7 +152,10 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="22.01.22 (Sa) 10 - 13 Uhr (noch 2 freie Plätze)">22.01.22 (Sa) 10 - 13 Uhr (noch 2 freie Plätze)</option>
+                                    <option value="18.02.22 (Fr) 18 - 21 Uhr">18.02.22 (So) 18 - 21 Uhr</option>
+                                    <option value="20.02.22 (So) 10 - 13 Uhr">20.02.22 (So) 10 - 13 Uhr</option>
+                                    <option value="25.02.22 (Fr) 18 - 21 Uhr">25.02.22 (Fr) 18 - 21 Uhr</option>
+                                    <option value="27.02.22 (So) 10 - 13 Uhr">27.02.22 (So) 10 - 13 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
                                     
@@ -175,9 +178,9 @@
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
                                     <!--option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option-->
-                                    <option value="seit mindestens 14 Tagen vollständig geimpft (nicht länger als 6 Monate) + Schnelltest">seit mindestens 14 Tagen vollständig geimpft (nicht länger als 6 Monate) + Schnelltest</option>
+                                    <option value="seit mindestens 14 Tagen vollständig geimpft (nicht älter als 6 Monate)">seit mindestens 14 Tagen vollständig geimpft (nicht älter als 6 Monate)</option>
                                     <option value="Geboostert">Geboostert</option>
-                                    <option value="genesen (nicht länger als 6 Monate) + Schnelltest">genesen (nicht länger als 6 Monate) + Schnelltest</option>
+                                    <option value="genesen (nicht älter als 3 Monate) + Schnelltest">genesen (nicht älter als 3 Monate) + Schnelltest</option>
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
