--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -152,9 +152,11 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="25.02.22 (Fr) 18 - 21 Uhr">25.02.22 (Fr) 18 - 21 Uhr</option>
+                                    <option value="01.04.22 (Fr) 18 - 21 Uhr">01.04.22 (Fr) 18 - 21 Uhr</option>
+                                    <option value="09.04.22 (Sa) 16 - 19 Uhr">09.04.22 (Sa) 16 - 19 Uhr</option>
+                                    <option value="10.04.22 (So) 10 - 13 Uhr">10.04.22 (So) 10 - 13 Uhr</option>
+                                    <option value="23.04.22 (Sa) 10 - 13 Uhr">23.04.22 (Sa) 10 - 13 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
-                                    <!--option value="21.11.21 (So) 10 - 13 Uhr">21.11.21 (So) 10 - 13 Uhr</option>
                                     
 
 
