--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -152,8 +152,9 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
+                                    <option value="24.04.22 (So) 15 - 18 Uhr"> 24.04.22 (So) 15 - 18 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen."> Benachrichtige mich bei neuen Terminen.</option>
-                                    <!--<option value="05.12.21 (So) 10 - 12:30 Uhr"> 05.12.21 (So) 10 - 12:30 Uhr</option>-->
+                                    
                                     
 
                                 </select>
