--- a/derstall.html
+++ b/derstall.html
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/Website_4DerStall_Header_Lettering im Stall-1800p.jpg');">
+         style="        background-image: url('images/Titelbild_DerStall.JPG');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
