--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -90,12 +90,10 @@
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Endlich wieder Workshops!</h1>
 
-                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Infektionsstufe die folgenden Nachweise erbracht werden können.
-                                Basisstufe: 3G, Warnstufe: 3G+ (max. 48h alter PCR-Test), Alarmstufe: 2G(+). Bitte bringe hierfür einfach einen Nachweis mit zum Workshop.</p>
+                            <p>Mit einem ausgetüftelten Hygienekonzept kann es im Stall wieder losgehen. Laut Infektionsschutzgesetz ist es erlaubt Workshops stattfinden zu lassen, wenn passend zur jeweiligen Infektionsstufe die folgenden Nachweise erbracht werden können.</p>
 
                             <p>
-                                Termine mit freien Plätzen findest Du unten im Anmeldeformular.
-                                Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
+                                Die Termine mit freien Plätzen findest Du unten im Anmeldeformular. Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
                                 Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                             </p>
 
@@ -177,9 +175,10 @@
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
                                     <!--option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option-->
-                                    <option value="seit mindestens 14 Tagen vollständig geimpft (nicht älter als 6 Monate)">seit mindestens 14 Tagen vollständig geimpft (nicht älter als 6 Monate)</option>
+                                    <option value="Seit mindestens 14 Tagen vollständig geimpft (nicht älter als 6 Monate)">seit mindestens 14 Tagen vollständig geimpft (nicht älter als 6 Monate)</option>
                                     <option value="Geboostert">Geboostert</option>
-                                    <option value="genesen (nicht älter als 3 Monate) + Schnelltest">genesen (nicht älter als 3 Monate) + Schnelltest</option>
+                                    <option value="Genesen (nicht älter als 3 Monate)">genesen (nicht älter als 3 Monate)</option>
+                                    <option value="Getestet (nicht älter als 24 h)">Getestet (nicht älter als 24 h)</option>
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
