--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -150,7 +150,6 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="10.04.22 (So) 10 - 13 Uhr">10.04.22 (So) 10 - 13 Uhr</option>
                                     <option value="23.04.22 (Sa) 10 - 13 Uhr">23.04.22 (Sa) 10 - 13 Uhr</option>
                                     <option value="08.05.22 (So) 10 - 13 Uhr">08.05.22 (So) 10 - 13 Uhr</option>
                                     <option value="13.05.22 (Fr) 18 - 21 Uhr">13.05.22 (Fr) 18 - 21 Uhr</option>
@@ -176,10 +175,10 @@
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
                                     <!--option value="in den letzten 48h negativ getestet worden (PCR)">in den letzten 48h negativ getestet worden (PCR)</option-->
-                                    <option value="Seit mindestens 14 Tagen vollständig geimpft (nicht älter als 9 Monate)">seit mindestens 14 Tagen vollständig geimpft (nicht älter als 9 Monate)</option>
-                                    <option value="Geboostert">Geboostert</option>
+                                    <option value="Ich bestätige am Workshop-Termin symptomfrei zu sein">Ich bestätige am Workshop-Termin symptomfrei zu sein</option>
+                                    <!--option value="Geboostert">Geboostert</option>
                                     <option value="Genesen (nicht älter als 3 Monate)">genesen (nicht älter als 3 Monate)</option>
-                                    <option value="Getestet (nicht älter als 24 h)">Getestet (nicht älter als 24 h)</option>
+                                    <option value="Getestet (nicht älter als 24 h)">Getestet (nicht älter als 24 h)</option-->
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
