--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -169,10 +169,11 @@
                             <div class="col-md-6 form-group">
                                 <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
                                     <option value="" selected="" disabled="">Coronabedingungen</option>
-                                    <option value="Seit mindestens 14 Tagen vollständig geimpft (nicht älter als 9 Monate)">seit mindestens 14 Tagen vollständig geimpft (nicht älter als 9 Monate)</option>
+                                    <!--option value="Seit mindestens 14 Tagen vollständig geimpft (nicht älter als 9 Monate)">seit mindestens 14 Tagen vollständig geimpft (nicht älter als 9 Monate)</option>
                                     <option value="Geboostert">Geboostert</option>
                                     <option value="Genesen (nicht älter als 3 Monate)">genesen (nicht älter als 3 Monate)</option>
-                                    <option value="Getestet (nicht älter als 24 h)">Getestet (nicht älter als 24 h)</option>
+                                    <option value="Getestet (nicht älter als 24 h)">Getestet (nicht älter als 24 h)</option-->
+                                    <option value="Ich bestätige am Workshop-Termin symptomfrei zu sein">Ich bestätige am Workshop-Termin symptomfrei zu sein</option>
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
