--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -149,9 +149,7 @@
                             <div class="col-md-6 form-group">
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
-                                    <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="13.05.22 (Fr) 18 - 21 Uhr">13.05.22 (Fr) 18 - 21 Uhr</option>
-                                    <option value="20.05.22 (Fr) 18 - 21 Uhr">20.05.22 (Fr) 18 - 21 Uhr</option>
+                                    <option value="" selected="" disabled="">Hier findest du alle freien Termine</option
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
