--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -94,7 +94,7 @@
 
                             <p>
                                 Die Termine mit freien Plätzen findest Du unten im Anmeldeformular. Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
-                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
+                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen. Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
                             </p>
 
                             <p>
@@ -149,7 +149,11 @@
                             <div class="col-md-6 form-group">
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
-                                    <option value="" selected="" disabled="">Hier findest du alle freien Termine</option
+                                    <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
+                                    <option value="FR, 03. Juni 15-18 Uhr ">FR, 03. Juni 15-18 Uhr</option>
+                                    <option value="SO, 26. Juni 15-18 Uhr ">SO, 26. Juni 15-18 Uhr</option>
+                                    <option value="FR, 01. Juli 15-18 Uhr ">FR, 01. Juli 15-18 Uhr</option>
+                                    <option value="SO, 17. Juli 12-15 Uhr ">SO, 17. Juli 12-15 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
