--- a/shop.html
+++ b/shop.html
@@ -107,10 +107,10 @@
                             <h2>Gutscheine für Lettering-Kurse</h2>
 
                         </div>
-                        <img src="images/Website_5Shop_Kachel_Gutschein_Lettering im Stall-149-1000p.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Gutschein_1000x1000vorne" alt="Image" class="img-fluid">
                     </a>
                 </div>
-
+                
                 <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="200">
                     <a href="fussmatte.html" class="work-thumb">
                         <div class="work-text">
