--- a/shop.html
+++ b/shop.html
@@ -105,6 +105,7 @@
                     <a href="gutscheinbestellen.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Gutscheine für Lettering-Kurse</h2>
+                            <p>individuell</p>
 
                         </div>
                         <img src="images/Gutschein_1000x1000vorne" alt="Image" class="img-fluid">
@@ -115,7 +116,7 @@
                     <a href="fussmatte.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Personalisierte Fußmatten</h2>
-                            <p>ab 30 €</p>
+                            <p>ab 34 €</p>
                         </div>
                         <img src="images/Fußmatte_ICKERT.jpg" alt="Image" class="img-fluid">
                     </a>
