--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -150,6 +150,8 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
+                                    <option value="Sa, 10.09.2022 13-16 Uhr">Sa, 10.09.2022 13-16 Uhr</option>
+                                    <option value="So, 02.10.2022 13-16 Uhr">So, 02.10.2022 13-16 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
