--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -95,7 +95,12 @@
                                 <p>
                                 Freie Termine findest Du unten im Anmeldeformular unter "Termin wählen". Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
                                 <p>
-                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen. Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
+                                
+                                
+                             <p>
+                                <small>
+                                    Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen. Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
+                                </small>
                             </p>
 
                             <p>
