--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -94,12 +94,13 @@
                                 Im Anfängerkurs zeig ich Dir alle Handlettering-Basics, um am Ende des Kurses ein erstes eigenes Projekt zu gestalten.
                                 <p>
                                 Freie Termine findest Du unten im Anmeldeformular unter "Termin wählen". Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
+                                Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                                 <p>
                                 
                                 
                              <p>
                                 <small>
-                                    Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen. Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
+                                   Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
                                 </small>
                             </p>
 
