--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -157,7 +157,9 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="So, 02.10.2022 13-16 Uhr">So, 02.10.2022 13-16 Uhr</option>
+                                    <option value="So, 13.11.2022 13-16 Uhr">So, 13.11.2022 13-16 Uhr</option>
+                                    <option value="Fr, 16.12.2022 18-21 Uhr">Fr, 16.12.2022 18-21 Uhr</option>
+                                    <option value="So, 18.12.2022 13-16 Uhr">So, 18.12.2022 13-16 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
