--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -149,6 +149,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
+                                    <option value="Sa, 12.11.2022 14-17 Uhr"> Sa, 12.11.2022 14-17 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen."> Benachrichtige mich bei neuen Terminen.</option>
                                     
                                     
