--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -50,7 +50,7 @@
                             <a class="nav-link " href="index.html">Willkommen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="letteringlernen.html">Lettering lernen</a>
+                            <a class="nav-link active" href="letteringlernen.html">Workshop</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="anfrage.html">Deine individuelle Anfrage</a>
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering Lernen</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Workshop</h1>
                     <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Infos">Infos</a></p>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                     <div class="">
-                        <h3 class="mb-4">Workshops</h3>
+                        <h3 class="mb-4">Lettering lernen</h3>
                         <p>Hast Du Lust die Kunst des schönen Schreibens zu lernen?</p>
                         <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
                         <p>Im darauf aufbauenden Fortgeschrittenen-Workshop vertiefen wir Deine Brushlettering-Kenntnisse, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
