--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -91,7 +91,9 @@
                                 <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Lettering Workshops im Stall</h1>
 
                             <p>
-                                Im Anfängerkurs zeig ich Dir alle Handlettering-Basics, um am Ende des Kurses ein erstes eigenes Projekt zu gestalten.
+                                <p>Hast Du Lust die Kunst des schönen Schreibens zu lernen?</p>
+                                <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
+                                <p>Im darauf aufbauenden Fortgeschrittenen-Workshop vertiefen wir Deine Brushlettering-Kenntnisse, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
                                 <p>
                                 Freie Termine findest Du unten im Anmeldeformular unter "Termin wählen". Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
                                 Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
