--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Workshop</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Workshops</h1>
                     <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Infos">Infos</a></p>
                 </div>
             </div>
@@ -92,16 +92,16 @@
 
                     <a href="anfaengerkursbuchen.html" target="_blank" class="work-thumb">
                         <div class="work-text">
-                            <h2>Workshop für Anfänger</h2>
-                            <p>55€ Kursgebühr</p>
+                            <h2>Lettering für Anfänger und Fortgeschrittene</h2>
+                            <p>55 € - 60 € Kursgebühr</p>
                         </div>
                         <img src="images/AnfaengerWorkshop.png" alt="Image" class="img-fluid">
                     </a>
 
                     <a href="fortgeschrittenenkursbuchen.html" target="_blank" class="work-thumb">
                         <div class="work-text">
-                            <h2>Workshop für Fortgeschrittene</h2>
-                            <p>60€ Kursgebühr</p>
+                            <h2>Kranz binden</h2>
+                            <p>35 € Kursgebühr</p>
                         </div>
                         <img src="images/AdvancedWorkshop.png" alt="Image" class="img-fluid">
                     </a>
