--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="index.html">Willkommen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="letteringlernen.html">Lettering lernen</a>
+                            <a class="nav-link" href="letteringlernen.html">Workshop</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="anfrage.html">Deine individuelle Anfrage</a>
