--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -103,7 +103,7 @@
                             <h2>Kranz binden</h2>
                             <p>35 € Kursgebühr</p>
                         </div>
-                        <img src="images/AdvancedWorkshop.png" alt="Image" class="img-fluid">
+                        <img src="images/Workshop_KranzBinden.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
