--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -68,7 +68,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/Website_2LetteringLernen_WorkshopA_Header_Lettering im Stall-97.jpg');">
+         style="        background-image: url('images/Website_2LetteringLernen_WorkshopF_Header_Lettering im Stall-1800p');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
