--- a/fortgeschrittenenkursbuchen.html
+++ b/fortgeschrittenenkursbuchen.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
-                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Fort­ge­schrit­te­nen­kurs buchen</h1>
+                    <h1 class="mb-4" data-aos="fade-up" data-aos-delay="">Kranz binden</h1>
                     <p class="custom-breadcrumbs" data-aos="fade-up" data-aos-delay="100"><a href="index.html">Home</a> <span class="mx-3">/</span><a href="#Anmeldung">Melde dich an</a></p>
                 </div>
             </div>
@@ -90,16 +90,11 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                Im Anfängerkurs zeig ich Dir alle Handlettering-Basics, um am Ende des Kurses ein erstes eigenes Projekt zu gestalten.
+                                texttexttext
                                 <p>
-                                Freie Termine findest Du unten im Anmeldeformular unter "Termin wählen". Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
+                                texttexttext
                                 Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen. Ich behalte mir vor, den Workshop bis 3 Tage im Voraus abzusagen, sollte die Mindestteilnehmerzahl von 8 Personen nicht erreicht sein.
                             </p>
-
-                            <p>
-                                <small>
-                                    Die Workshop Termine werden regelmäßig aktualisiert und ergänzt. Mach Dir also keine Sorge, falls gerade kein passender Workshop Termin für Dich dabei ist.
-                                </small>
                             </p>
                             <p>
                             </p>
@@ -149,7 +144,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Sa, 12.11.2022 14-17 Uhr"> Sa, 12.11.2022 14-17 Uhr</option>
+                                    <option value="Di, 22.11.2022 19-21 Uhr"> Di, 22.11.2022 19-21 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen."> Benachrichtige mich bei neuen Terminen.</option>
                                     
                                     
