--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -159,9 +159,10 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="So, 13.11.2022 13-16 Uhr">So, 13.11.2022 13-16 Uhr</option>
-                                    <option value="Fr, 16.12.2022 18-21 Uhr">Fr, 16.12.2022 18-21 Uhr</option>
-                                    <option value="So, 18.12.2022 13-16 Uhr">So, 18.12.2022 13-16 Uhr</option>
+                                    <option value="Fortgeschritten: Sa, 12.11.2022 14-17 Uhr">Fortgeschritten: Sa, 12.11.2022 14-17 Uhr</option>
+                                    <option value="Anfänger: So, 13.11.2022 13-16 Uhr">Anfänger: So, 13.11.2022 13-16 Uhr</option>
+                                    <option value="Anfänger: Fr, 16.12.2022 18-21 Uhr">Anfänger: Fr, 16.12.2022 18-21 Uhr</option>
+                                    <option value="Anfänger: So, 18.12.2022 13-16 Uhr">Anfänger: So, 18.12.2022 13-16 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
