--- a/anfaengerkursbuchen.html
+++ b/anfaengerkursbuchen.html
@@ -98,7 +98,14 @@
                                 Freie Termine findest Du unten im Anmeldeformular unter "Termin wählen". Ich freue mich schon darauf, mit Dir in einem der Workshops kreativ zu werden.
                                 Nach dem Abschicken des Formulars sende ich Dir eine Teilnahme-Bestätigung mit allen wichtigen Informationen per Mail zu. Da dies keine automatisierte Bestätigung sein wird, kann es zu zeitlichen Verzögerungen von bis zu einem Tag kommen.
                                 <p>
-                                
+                                    <strong class="d-block text-black">Im Kurspreis inklusive:</strong>
+                                    <ul>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Guide, der uns durch den Workshop führt</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Ein Starter-Kit mit vielen tollen Produkten</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Viele Stifte zum Testen </li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">Snacks und Zitronenwasser</li>
+                                        <li style="list-style: disc; display: list-item; margin-left:5px;">10 % Rabattgutschein für Deine Lettering Ausstattung bei <a href="https://www.zimmermann-schreibkultur.de/" target="_blank">Zimmermann Schreibkultur</a></li>
+                                    </ul>
                                 
                              <p>
                                 <small>
