--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -95,7 +95,7 @@
                             <h2>Lettering für Anfänger und Fortgeschrittene</h2>
                             <p>55 € - 60 € Kursgebühr</p>
                         </div>
-                        <img src="images/AnfaengerWorkshop.png" alt="Image" class="img-fluid">
+                        <img src="images/Workshop_Lettering.jpg" alt="Image" class="img-fluid">
                     </a>
 
                     <a href="fortgeschrittenenkursbuchen.html" target="_blank" class="work-thumb">
@@ -108,10 +108,7 @@
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                     <div class="">
-                        <h3 class="mb-4">Lettering lernen</h3>
-                        <p>Hast Du Lust die Kunst des schönen Schreibens zu lernen?</p>
-                        <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
-                        <p>Im darauf aufbauenden Fortgeschrittenen-Workshop vertiefen wir Deine Brushlettering-Kenntnisse, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
+                        <h3 class="mb-4">Workshops im Stall</h3>
                         <ul class="list-unstyled mb-5">
                             <li class="mb-3">
                                 <strong class="d-block text-black">Inklusive:</strong>
